--- a/Solr/build.gradle
+++ b/Solr/build.gradle
@@ -1,6 +1,4 @@
-plugins {
-    id 'java-library'
-}
+description = """Solr"""
 
 dependencies {
     // This dependency is exported to consumers, that is to say found on their compile classpath.
@@ -16,13 +14,8 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-actuator'
     compile 'io.springfox:springfox-swagger2:2.7.0'
     compile 'io.springfox:springfox-swagger-ui:2.7.0'
+    
     testCompile 'org.springframework.boot:spring-boot-starter-test:2.1.2.RELEASE'
     testCompile 'org.springframework.restdocs:spring-restdocs-mockmvc:2.0.3.RELEASE'
     
-    //lombok
-    compileOnly 'org.projectlombok:lombok:1.18.6'
-	annotationProcessor 'org.projectlombok:lombok:1.18.6'
-
-    // Use JUnit test framework
-    testImplementation 'junit:junit:4.12'
 }
